<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_send_notif"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bckground"
    tools:context=".SendNotif">

    <TextView
        android:id="@+id/tvPartner3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green_200"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="35dp"
        android:text="@string/t_pick_order"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteY="50dp"
        android:padding="12dp"

        />



    <TextView
        android:id="@+id/partner_to_send31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Café Final Work"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="12dp"
        />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:layout_weight="1"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/etAddress31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t_address_order"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="12dp"
        android:inputType="textMultiLine"
        />


    <TextView
        android:id="@+id/order_number31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_order_nnumber"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="12dp"
        />


    <Button
        android:id="@+id/btn_picked_up"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_picked"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="12dp"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColorHint="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_decline31"
        style="@style/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="12dp"
        android:text="@string/btn_declined"
        android:textColor="@color/white" />




</LinearLayout>