<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_send_notif"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bckground"
    tools:context=".ReceiveNotif">

    <TextView
        android:id="@+id/tvPartner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green_200"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="35dp"
        android:text="@string/t_order"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteY="50dp"
        android:padding="12dp"
        />

    <TextView
        android:id="@+id/order_number_R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="12dp"
        />

    <TextView
        android:id="@+id/partner_to_send_R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="12dp"
        />

    <TextView
        android:id="@+id/address_to_send_R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="12dp"
        />

    <TextView
        android:id="@+id/tele_R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="12dp"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_accept"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_accept"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="16dp"
            />
        <Button
            android:id="@+id/btn_decline"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_decline"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="16dp"
            />
    </LinearLayout>


</LinearLayout>